Make the first 10 katas with tests