@@ -1,5 +1,6 @@
 package katas;
 
+import com.codepoetics.protonpack.StreamUtils;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import model.MovieList;
@@ -8,6 +9,7 @@ import util.DataUtil;
 import java.util.Date;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 /*
     Goal: Create a datastructure from the given data:
@@ -55,9 +57,14 @@ public class Kata10 {
         List<Map> lists = DataUtil.getLists();
         List<Map> videos = DataUtil.getVideos();
 
-        return ImmutableList.of(ImmutableMap.of("name", "someName", "videos", ImmutableList.of(
-                ImmutableMap.of("id", 5, "title", "The Chamber"),
-                ImmutableMap.of("id", 3, "title", "Fracture")
-        )));
+        return lists.stream()
+                .map(list -> {
+                    return Map.of("name", list.get("name"),
+                            "videos", videos.stream()
+                                                        .filter(video -> video.get("listId").equals(list.get("id")))
+                                                        .map(video -> Map.of("id", video.get("id"), "title", video.get("title")))
+                                                        .collect(Collectors.toList()));
+                })
+                .collect(Collectors.toList());
     }
 }
